// $Id: CHANGELOG.txt,v 1.156 2006/08/30 08:40:36 dries Exp $

Drupal x.x.x, xxxx-xx-xx (development version)
------------------------
- completely retooled the administration page
    * /admin now contains an administration page which may be themed
- added web-based installer which can:
    * automatically generate the database configuration file
    * install pre-made 'install profiles' or distributions
    * import the database structure with automatic table prefixing
- introduced the ability to alter mail sent from system
- moved core modules to their own directories to allow additional flexibility
- added support for different cache backends
- added support for a generic "sites/all" directory.
- usability:
    * added support for auto-complete forms (AJAX) to user profiles.
    * made it possible to instantly assign roles to newly created user accounts.
    * improved configurability of the contact forms.
    * reorganized the settings pages.
    * made it easy to investigate popopular search terms
- block system:
    * extended the block visibility settings with a role specific settings.
    * made it possible to customize all block titles.
- poll module:
    * optionally allow people to inspect all votes.
    * optionally allow people to cancel their vote.
- distributed authentication:
    * added default server option.
- added default robots.txt to control crawlers.
- database API:
    * added db_table_exists().
- blogapi module:
    * 'blogapi new' and 'blogapi edit' nodeapi operations.
- user module:
    * added hook_profile_alter().
    * e-mail verification is made optional.
    * added mass editing and filtering on admin/user/user.
- PHP Template engine:
    * add the ability to look for a series of suggested templates.
    * look for page templates based upon the path.
    * look for block templates based upon the region, module, and delta.
- content system:
    * made it easier for node access modules to work well with each other.